# postgresql_management_langchain_pgvector

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_pgvector_controller.ipynb
db/: __init__.py  hybridsearch_bm25.py
rrf/: __init__.py
service/: __init__.py  pgvector_search_manager.py
src/: setup.cfg
src/langchain_pgvector_searchkit/: __init__.py
src/langchain_pgvector_searchkit/rrf/: __init__.py  rrf_weighted_sum.py
src/langchain_pgvector_searchkit/service/: pgvector_search_manager.py
