[metadata]
name = langchain_pgvector_searchkit
version = 0.1.0
description = LangChain + PostgreSQL + pgvector management toolkit
author = Your Name
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src